Fix tilt-rotation when the canvas is rotated and stabilizer is active

BUG:436618